CRM-Broker/cd/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: crm-broker
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/plugins: rate-limiting,request-size-limiting,prometheus
spec:
  ingressClassName: kong
  rules:
    - host: servicetest.jebsen.com
      http:
        paths:
          - backend:
              service:
                name: crm-broker
                port:
                  name: http
            path: /crmbroker
            pathType: ImplementationSpecific
